2010-07-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-43

	* R/AllClass.R (Model): as mother class (of "glpModel")

	* R/spModels.R (IRLS): more options()
	(updateModel): update(<glm4>)

2010-07-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-42, CRAN-released: 2010-07-15, r 2566

	* R/spModels.R (glm4, IRLS): glm4 was 'glm1'; tweaks.

2010-07-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: rename, export and
	* man/glpModel-class.Rd: document Doug's new "glpModel" class.

2010-07-08  Douglas Bates <bates@stat.wisc.edu>

	* R/AllClass.R: new "lpMod" class (-> later =: "glpModel"), and
	working function:
	* R/spModels.R (glm1): using linear pred.Model class, and
	Bates-Watts convergence criterion.

2010-07-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lMatrix.R (whichDense): use arrayInd()
	* R/zzz.R (arrayInd): provide for older R versions

2010-07-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/chm_common.c (chm_triplet_to_SEXP): deal more carefully with
	NAs, needed e.g., on Solaris; thanks to Ruth and Brian Ripley.

	* R/Ops.R (Compare <Csparse>): fix bug uncovered by "alongside" the
	above.

2010-07-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (x[] <- 0): fix shortcut code.
	* tests/indexing.R: and test

	* R/nearPD.R (nearPD): 'doDykstra = TRUE' and *do* use Dykstra's
	correction which was *not* used in Jens' code; thanks to Bernhard
	Spangl for a report

2010-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R: fix mean() method; add sparse one, remaining sparse
	at least for trim = 0.

2010-06-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-41, CRAN-released: 2010-07-03, r 2555

	* R/sparseVector.R (spV2M): enable sparseVector -> (sparse)Matrix
	as(*,.) coercion.

2010-06-07  Martin Maechler  <maechler@stat.math.ethz.ch>
